# File_Reader_CLI

./: Cargo.toml  README.md  tools
src/: main.rs
